# XML2SCA

./: CMakeLists.txt  README.md
docs/: xmlstructure.mm
example/: app_sensor.xml  dc_motor.xml  first_sca.xml  sensor_adc_example.md  sensor_adc_example.xml
example/sensor_adc_example/: CMakeLists.txt
example/sensor_adc_example/configs/: cfg-toplevel.json
example/sensor_adc_example/src/: CMakeLists.txt  sc_top.h  sca_tdf_adc.cpp  sca_tdf_adc.h  sca_tdf_drain.cpp  sca_tdf_drain.h  sca_tdf_gnd.cpp  sca_tdf_gnd.h  sca_tdf_sine.cpp  sca_tdf_sine.h
example/sensor_adc_example/src/basic/: file_parse.h
example/sensor_adc_example/tb/adc/: CMakeLists.txt  cfg.json  sc_top.h
example/sensor_adc_example/tb/drain/: CMakeLists.txt  cfg.json  sc_top.h
example/sensor_adc_example/tb/gnd/: CMakeLists.txt  cfg.json  sc_top.h
example/sensor_adc_example/tb/sine/: CMakeLists.txt  cfg.json  sc_top.h
src/: CMakeLists.txt  common.h  create_module_cpph.cpp  create_module_cpph.h  create_module_tb.cpp  create_module_tb.h  create_project.cpp  create_project.h  create_top_tb.cpp  create_top_tb.h  insert_file_header_info.cpp  insert_file_header_info.h  main.cpp  parse_project_xml.cpp  parse_project_xml.h
src/basics/: file_parse.h
src/template_files/: temp_FindPackageHandleStandardArgs_cmake.h  temp_FindSystemCAMS_cmake.h  temp_FindSystemC_cmake.h  temp_cxxopts_hpp.h  temp_file_parse_h.h  temp_files.h  temp_json_hpp.h  temp_main_cpp.h
src/template_files/src/: main.cpp
src/template_files/src/base/: file_parse.h
