add_executable( XML2SCA
common.h
create_module_cpph.cpp
create_module_cpph.h
create_module_tb.cpp
create_module_tb.h
create_project.cpp
create_project.h
create_top_tb.cpp
create_top_tb.h
insert_file_header_info.cpp
insert_file_header_info.h
main.cpp
parse_project_xml.cpp
parse_project_xml.h
basics/TinyXML2/tinyxml2.cpp
basics/TinyXML2/tinyxml2.h
)


